fixed jumping info text

--- a/public/css/front_end/all.less
+++ b/public/css/front_end/all.less
@@ -3150,7 +3150,7 @@ span.pop{
     pointer-events: none;
 }
 #commentCount{
-    display: none;
+    visibility: hidden;
 }
 @media only screen and (min-width: 1200px){
     .search-box .js-slide-hidden{
