--- a/public/css/front_end/store-page.less
+++ b/public/css/front_end/store-page.less
@@ -524,7 +524,6 @@
         font-size: 13px;
         margin: -13px 0 20px;
         line-height: 16px;
-        min-height: 130px;
         @media only screen and (max-width: 779px){
             margin: 0 0 20px;
         }
